Update InferredAnnosCounter.java